docs/v5.6.1/_sources/gallery/experiment/sphere/Qsca_vs_wavelength_std.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/Qsca_vs_wavelength_std.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_Qsca_vs_wavelength_std.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_Qsca_vs_wavelength_std.py:


Sphere: Qsca vs wavelength STD
==============================

.. GENERATED FROM PYTHON SOURCE LINES 6-46



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_Qsca_vs_wavelength_std_001.png
   :alt: Qsca vs wavelength std
   :srcset: /gallery/experiment/sphere/images/sphx_glr_Qsca_vs_wavelength_std_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    BK7            sellmeier  specs/SCHOTT-optical/P-BK7
    aluminium      tabulated  main/Al/Rakic
    fused_silica   sellmeier  main/SiO2/Malitson
    gold           tabulated  main/Au/Olmon-ev
    silver         tabulated  main/Ag/Johnson
    water          sellmeier  main/H2O/Daimon-19.0C

    [<matplotlib.lines.Line2D object at 0x7fe30c25ead0>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c25ea50>, <matplotlib.lines.Line2D object at 0x7fe30c25ca50>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30bfff010>, <matplotlib.lines.Line2D object at 0x7fe30c259150>, <matplotlib.collections.FillBetweenPolyCollection object at 0x7fe30c882a90>]





|

.. code-block:: Python

    import numpy as np
    from PyMieSim import (
        ureg,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        TabulatedMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[0.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=np.linspace(200, 1800, 200) * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )

    silver = TabulatedMaterial(material_name="silver")
    gold = TabulatedMaterial(material_name="gold")

    scatterer = SphereSet(
        diameter=np.linspace(400, 1400, 10) * ureg.nanometer,
        material=[silver, gold, 1.4],
        medium=[1],
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source)

    result = experiment.get("Qsca")

    result.plot(x="source:wavelength", std="scatterer:diameter")



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.214 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_Qsca_vs_wavelength_std.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Qsca_vs_wavelength_std.ipynb <Qsca_vs_wavelength_std.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Qsca_vs_wavelength_std.py <Qsca_vs_wavelength_std.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Qsca_vs_wavelength_std.zip <Qsca_vs_wavelength_std.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
